istiofiles/istio_darkrelease_uiservice.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: ui-darkrelease-virtualservice
  namespace: default
spec:
  hosts:
    - ui
  http:
    - match:
        - headers:
            x-my-header:
              exact: darkrelease
      route:
        - destination:
            host: ui
            subset: canary
    - route:
        - destination:
            host: ui
            subset: original
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: ui-darkrelease-destination-rules
  namespace: default
spec:
  host: ui
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: canary
      name: canary
