istiofiles/istio_rules_canary.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: ui-virtualservice
  namespace: default
spec:
  hosts:     
    - ui
  http:
    - route:
        - destination:
            host: ui
            subset: original
          weight: 50
        - destination:
            host: ui
            subset: canary
          weight: 50
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: ui-destinationrule
  namespace: default
spec:
  host: ui
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: canary
      name: canary
